adding links to thank you page navigation

--- a/thankyou.html
+++ b/thankyou.html
@@ -17,10 +17,10 @@
 
         <nav class="navbar">
             <ul id="floatright" class="menu">
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a class="active" href="https://greenfield-org.github.io/">Home</a></li>
+                <li><a href="https://greenfield-org.github.io/#projects">Projects</a></li>
+                <li><a href="https://greenfield-org.github.io/#team">Team</a></li>
+                <li><a href="https://greenfield-org.github.io/#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
