--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>GreenField Development</title>
         <meta name="description" content="">
+        <meta name="keywords" content="Mobile development, Wordpress development, Greenfield, Greenfield Development, freelance, web development, web application, software engineering, responsive design">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="./img/favicon.svg">
