--- a/thankyou.html
+++ b/thankyou.html
@@ -1,32 +1,42 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GreenField Development</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/x-icon" href="./img/favicon.svg">
-    </head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>GreenField Development</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.svg" />
+  </head>
+  <body>
     <header class="header">
-        <a href="#home"><img class="logo" src="./img/logo.PNG" alt="greenfield org logo"></a>
-        <!-- Hamburger icon -->
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
+      <a href="#home"
+        ><img class="logo" src="./img/logo.PNG" alt="greenfield org logo"
+      /></a>
+      <!-- Hamburger icon -->
+      <input class="side-menu" type="checkbox" id="side-menu" />
+      <label class="hamb" for="side-menu"
+        ><span class="hamb-line"></span
+      ></label>
 
-        <nav class="navbar">
-            <ul id="floatright" class="menu">
-                <li><a class="active" href="https://greenfield-org.github.io/">Home</a></li>
-                <li><a href="https://greenfield-org.github.io/#projects">Projects</a></li>
-                <li><a href="https://greenfield-org.github.io/#team">Team</a></li>
-                <li><a href="https://greenfield-org.github.io/#contact">Contact</a></li>
-            </ul>
-        </nav>
+      <nav class="navbar">
+        <ul id="floatright" class="menu">
+          <li>
+            <a class="active" href="https://greenfield-org.github.io/">Home</a>
+          </li>
+          <li>
+            <a href="https://greenfield-org.github.io/#projects">Projects</a>
+          </li>
+          <li><a href="https://greenfield-org.github.io/#team">Team</a></li>
+          <li>
+            <a href="https://greenfield-org.github.io/#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="thankyou">
-        <img class="thankyouimage" src="./img/thankyoucouple.png">
-        <h1 class="thankyoutext">Thank you! We will be in touch shortly.</h1>
+      <img class="thankyouimage" src="./img/thankyoucouple.png" />
+      <h1 class="thankyoutext">Thank you! We will be in touch shortly.</h1>
     </div>
-</body>
+  </body>
 </html>
