addinng LBX to the projects page

--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
                     </div>
                 </div>
                 <div class="proj3">
-                    <img class="placeholder" src="./img/patience.jpg">
+                    <img class="placeholder" src="./img/LBXProj.png">
                     <div class="projinfo">
-                        <h2>Project Name</h2></br>
-                        <p>Project info and tech stack and all that Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad distinctio esse saepe! Mollitia ratione similique ut quis, accusantium minus iure rerum voluptatibus quas quam harum excepturi aliquam corporis nostrum. Vel.</p>
-                        <a href="#" target="_blank" rel="noreferrer">Link</a><br/>
+                        <h2>Lean Biologix</h2></br>
+                        <p>A custom Wordpress site built with Divi. GreenField handled the administrative side, worked on design, and created an extensive custom theme for the organization.</p>
+                        <a href="https://www.leanbiologix.com/" target="_blank" rel="noreferrer">Lean Biologix</a><br/>
                     </div>
                 </div>
                 <div class="proj4">
