pulling tailwind into the project with minimal config

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                gfPrimary: '#5e8932',
               }
             }
           }
